# claude_rust_project

./: .gitignore  .mcp.json  .pmat.yml  BUG_FIX_REPORT.md  CLAUDE.md  Cargo.toml  FLYWAY_MIGRATIONS_SUMMARY.md  INTEGRATION_TESTING_AND_DEPLOYMENT_GUIDE.md  NEXT_STEPS_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE2_SESSION2_REPORT.md  PHASE2_SESSION3_COMPLETE.md  PHASE2_SESSION4_BACKEND_START.md  PHASE2_SESSION4_FINAL_SUMMARY.md  PHASE2_SESSION_FINAL_STATUS.md  PHASE2_SESSION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_TESTING.md  PHASE5_TEST_SUMMARY.md  PHASE6_COMPLETION_REPORT.md  PHASE6_TESTING_REPORT.md  PHASE7_COMPLETION_REPORT.md  PMAT_CODE_CONTEXT.md  PMAT_COMPLIANCE_REPORT.md  PMAT_COMPREHENSIVE_ANALYSIS_REPORT.md  PMAT_INTEGRATION_PROGRESS.md  PMAT_INTEGRATION_SUMMARY.md  PMAT_PHASE1_COMPLETE.md  PMAT_PHASE1_FRONTEND_COMPLETE.md  PMAT_PHASE2_BACKEND_PLAN.md  PMAT_PHASE2_PLAN.md  PMAT_PHASE2_PROGRESS.md  PMAT_REFACTORING_PHASE1_COMPLETE.md  PMAT_SPRINT1_COMPLETE.md  PMAT_SPRINT1_PROGRESS.md  PMAT_SPRINT2_COMPLETE.md  PMAT_SPRINT2_PLAN.md  PMAT_SPRINT3_COMPLETE.md  PMAT_TASKPAGE_REFACTORING_COMPLETE.md  (+8 more)
.claude/: settings.local.json
archive/pmatinit-calculator/: ARCHIVE_README.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PHASE3_COMPLETION_REPORT.md  PHASE3_SUMMARY.md  PHASE3_TESTING.md  PHASE5_COMPLETION_REPORT.md  PHASE5_SUMMARY.md  README-calculator.md
archive/pmatinit-calculator/docs/: FINAL_PROJECT_SUMMARY.md  PROJECT_INFRASTRUCTURE.md  QUALITY_GATES.md  USER_GUIDE.md  mcp-integration-guide.md  phase0-validation-report.md
(+262 files in other folders)
